# SplitStreamer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build_image.sh  client.json  docker-compose.dev.yml  docker-compose.yml  genssl.sh  pigen.config  recipe.json  server.dev.toml  server.toml  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml
client/: Cargo.toml
client/src/: main.rs
confgen/: Cargo.toml
confgen/src/: main.rs
pigen-splitstreamer/: EXPORT_IMAGE  EXPORT_NOOBS
pigen-splitstreamer/00-install-gstreamer/: 00-packages
pigen-splitstreamer/01-copy-binaries/: 00-run.sh  splitstreamer.service
pigen-splitstreamer/01-copy-server-binaries/: 01-run.sh  splitstreamer.service
pigen-splitstreamer/02-copy-signaling-server/: 00-run.sh  02-run.sh  signaling.service
pigen-splitstreamer/03-copy-web-interface/: 01-run.sh
server/: Cargo.toml
server/src/: lib.rs  splitscreen_bin.rs
server/src/webrtc/: mod.rs  payloads.rs  peer.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs
signaling/: Dockerfile  package-lock.json  package.json  tsconfig.json
signaling/src/: client.ts  index.ts  server.ts
src/: config.rs  lib.rs  main.rs  settings.rs
src/webrtc/: mod.rs  peer.rs
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/src/: connection.ts  index.css  input.ts  main.ts
