[workspace.metadata]
name = "splitstreamer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "shared"]
resolver = "2"

[workspace.dependencies]
gstreamer = { version = "0.21.0", features = ["v1_18"] }
config = "0.13.3"
anyhow = "1.0.69"
serde = "1.0.152"

[profile.release]
debug = true
opt-level = 0
