[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = "*"
clap = "*"
futures-util = "*"
shared = { path = "../shared" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"

async-tungstenite = { version = "0.20.0", features = ["tokio-rustls-native-certs", "tokio-runtime"] }

gstreamer-webrtc = "*"
gstreamer-sdp = "*"
gst-plugin-fallbackswitch = "*"