[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
gstreamer = { workspace = true }
schemars = "0.8.12"
anyhow = { workspace = true }

[[bin]]
name = "schema"
